--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: string_equation
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
-repository: https://github.com/my_org/my_repo
+repository: https://github.com/dexterTalha/string_equation.git
 
 environment:
   sdk: ^3.5.0
